added Before and after page in New in 2.5
...that compares 2.1 with 2.5 screenshots.

refs #501

Change-Id: I75fc3c767dfcac06c17e426be62a73b4debda5dc

--- a/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/alignment.html
+++ b/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/alignment.html
@@ -20,7 +20,7 @@
 			alt="command link">Get started with HALE</a> guide.
 	</p>
 	<div>
-		<img src="images/alignment_view.png" title="Alignment view">
+		<img src="images/alignment_view.png" title="Alignment view" class="fit">
 	</div>
 	<p>
 		You can select a schema element or <i>cell</i> by clicking on the
@@ -29,7 +29,7 @@
 		in the <a href="../properties.html">Properties view</a>.
 	</p>
 	<div>
-		<img src="images/alignment_properties.png" title="Cell properties">
+		<img src="images/alignment_properties.png" title="Cell properties" class="fit">
 	</div>
 	<p>
 		The <i>Alignment view</i> also offers the possibility to manipulate
@@ -37,7 +37,7 @@
 		the context menu or the <i>Edit</i> menu in the main menu bar.
 	</p>
 	<div>
-		<img src="images/alignment_actions.png" title="Cell context menu">
+		<img src="images/alignment_actions.png" title="Cell context menu" class="fit">
 	</div>
 	
 	<br>
