--- a/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/data_common.xhtml
+++ b/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/data_common.xhtml
@@ -48,7 +48,7 @@
 			are.
 		</p>
 		<div>
-			<img src="images/compare.png" title="Data view in Compare mode"></img>
+			<img src="images/compare.png" title="Data view in Compare mode" class="fit"></img>
 		</div>
 		<p>
 			With <i>Explore</i> you can inspect an instance as it is, with all
@@ -57,7 +57,7 @@
 			used to switch between the sample instances.
 		</p>
 		<div>
-			<img src="images/explore.png" title="Data view in Explore mode"></img>
+			<img src="images/explore.png" title="Data view in Explore mode" class="fit"></img>
 		</div>
 	</div>
 	<!-- related concepts: instances -->
