--- a/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/error_log.html
+++ b/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/error_log.html
@@ -15,7 +15,7 @@
 			src="../../images/error.gif"> occurred related to that action.
 	</p>
 	<div>
-		<img src="images/error_log.png" title="Error Log">
+		<img src="images/error_log.png" title="Error Log" class="fit">
 	</div>
 	<p>You can use the view menu accessible through the small triangle
 		in the top right corner of the view to configure the log, e.g. to
