--- a/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/functions.html
+++ b/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/functions.html
@@ -13,7 +13,7 @@
 		function category.
 	</p>
 	<div>
-		<img src="images/functions_view.png">
+		<img src="images/functions_view.png" class="fit">
 	</div>
 	<p>
 		Further information on a selected function will be displayed in the <a
@@ -23,7 +23,7 @@
 		detailed description of the available functions.
 	</p>
 	<div>
-		<img src="images/functions_properties.png">
+		<img src="images/functions_properties.png" class="fit">
 	</div>
 
 	<br>
