--- a/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/properties.html
+++ b/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/properties.html
@@ -33,7 +33,7 @@
 	</p>
 	<div>
 		<img src="images/schema_properties.png"
-			title="Schema element properties">
+			title="Schema element properties" class="fit">
 	</div>
 	<p>Note that there are multiple named tabs on the left, each
 		representing a category of object properties. You can switch to a
