--- a/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/schema_explorer.html
+++ b/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/schema_explorer.html
@@ -33,7 +33,7 @@
 	</p>
 	<div>
 		<img src="images/schema_properties.png"
-			title="Schema element information in Properties view">
+			title="Schema element information in Properties view" class="fit">
 	</div>
 	<p class="Note">
 		Please note that the <strong>Properties</strong> view is a view for
