--- a/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/transformed_data.xhtml
+++ b/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/transformed_data.xhtml
@@ -15,7 +15,7 @@
 	</p>
 	<include path="eu.esdihumboldt.hale.doc.user/html/views/data_common.xhtml/selectors"></include>
 	<div>
-		<img src="images/transformed_filter.png"></img>
+		<img src="images/transformed_filter.png" class="fit"></img>
 	</div>
 	<include path="eu.esdihumboldt.hale.doc.user/html/views/data_common.xhtml/modes"></include>
 	
