--- a/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/type_hierarchy.html
+++ b/doc/plugins/eu.esdihumboldt.hale.doc.user/html/views/type_hierarchy.html
@@ -14,7 +14,7 @@
 		displayed in the <i>Type hierarchy view</i>.
 	</p>
 	<div>
-		<img src="images/type_hierarchy.png" title="Type hierarchy view">
+		<img src="images/type_hierarchy.png" title="Type hierarchy view" class="fit">
 	</div>
 	<p>
 		The type for which the hierarchy is displayed is marked with a violet
