added notes to HTML mapping documentation
refs #483

Change-Id: I7f39070a857601c8980ba4d4cd1338854dcc8306
Reviewed-on: http://gerrit.esdi-community.eu/1806
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/io/plugins/eu.esdihumboldt.hale.io.html/src/eu/esdihumboldt/hale/io/html/style.css
+++ b/io/plugins/eu.esdihumboldt.hale.io.html/src/eu/esdihumboldt/hale/io/html/style.css
@@ -29,6 +29,15 @@ p.explanation {
 	max-width: 580px;
 }
 
+p.notes {
+	white-space: pre-wrap;
+	margin-left: 0px;
+	max-width: 564px;
+	border: solid 1px #DDD;
+	background-color: #FAFAFA;
+	padding: 8px;
+}
+
 img {
 	border-style: none;
 }
